Update swagger.json with LoadClients and add ascii art
